[tool.poetry]
name = "luke-named-entity-recognition"
version = "0.1.0"
description = ""
authors = ["KengoShimizu <tealgreen0503@gmail.com>"]
readme = "README.md"
packages = [{include = "luke_named_entity_recognition"}]

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^0.21.0"
datasets = "^2.13.1"
numpy = "^1.25.0"
pandas = "^2.0.3"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
scikit-learn = "^1.3.0"
sentencepiece = "^0.1.99"
seqeval = "^1.2.2"
sudachidict-full = "^20230110"
sudachipy = "^0.6.7"
torch = {version = "^2.0.1+cu117", source = "torch-cu117"}
transformers = {extras = ["ja"], version = "^4.30.2"}
wandb = "^0.15.5"


[[tool.poetry.source]]
name = "torch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pandas-stubs = "^2.0.2.230605"
ruff = "^0.0.277"
types-pyyaml = "^6.0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true

[tool.ruff]
select = ["F", "E", "W", "C90", "I", "N", "UP", "B", "RUF"]
fixable = ["ALL"]
line-length = 119
target-version = "py311"
